Working on the base layout a little bit. Tabs and fixed the issue with overflow

--- a/client/app/styles/main.styl
+++ b/client/app/styles/main.styl
@@ -24,6 +24,7 @@ body
 .flex-container
   display: flex
   background-color: red
+  height: 100%
 
 .flex-row
   flex-direction: row
@@ -133,3 +134,11 @@ input, button
   background-color: black
   color: whitesmoke
   border-radius: 5px
+
+.tab-header
+  text-align: center
+  background-color: black
+  border-bottom: 1px solid grey
+
+.tab-header:not(:last-of-type)
+  border-right: 1px solid grey 
